--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
   box-shadow: 0 4px 16px 0 #b2a18455, 0 0 0 2px #b2a18433;
   transform-origin: top center; /* 👈 начало поворота сверху */
   /* animation: openFlapHalf 2s forwards; */
-  animation-delay: 2s;
+  /* animation-delay: 2s; */
   backface-visibility: visible;
   transition: box-shadow 0.3s, filter 0.3s;
 }
