--- a/assets/style.css
+++ b/assets/style.css
@@ -197,7 +197,7 @@ body{
     text-align: center;
     text-transform: uppercase;
     color: black;
-    font-size: 2em;
+    font-size: 1.5em;
     padding-top: 3px;
 }
 
@@ -225,7 +225,7 @@ body{
 .road__title{
     text-align: center;
     color: black;
-    font-size: 3em;
+    font-size: 2.2em;
     padding-bottom: 2px;
 }
 
@@ -273,7 +273,7 @@ body{
 .dresscode__title{
     text-align: center;
     color: black;
-    font-size: 3em;
+    font-size: 2.2em;
     padding-bottom: 2px;
     text-transform: uppercase;
 }
@@ -327,6 +327,15 @@ body{
     background: url('https://i.postimg.cc/NMjBPSvv/darkgray.png') no-repeat center / cover;
 }
 
+.second_screen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+}
 
 .dresscode__addinfo{
     font-size: 1.5em;
@@ -336,7 +345,7 @@ body{
 
 .whether{
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin: 15px 0;
 }
 
