--- a/assets/style.css
+++ b/assets/style.css
@@ -330,8 +330,8 @@ body{
 .second_screen {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    justify-content: space-between;
     height: 100vh;
     width: 100vw;
     background-color: white;
