--- a/assets/style.css
+++ b/assets/style.css
@@ -139,6 +139,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'montAm-bold';
+  src: url('./fonts/Montserratarm-Bold.otf') format('truetype');
+  font-weight: bold;
+  font-style: bold;
+}
 
 
 /* Vrdznagir */
@@ -275,13 +281,15 @@ body{
 }
 
 .additional{
-    font-size: 0.8em !important;
-    font-family: "Vrdznagir" !important;
+    font-size: 1em !important;
+    font-family: "montAm" !important;
+    /* font-weight: 700; */
 }
 
 .additional_{
-    font-size: 0.8em !important;
-    font-family: "Almond" !important;
+    font-size: 1em !important;
+    
+    font-family: "montAm" !important;
 }
 
 .dresscode{
@@ -422,7 +430,8 @@ body{
 }
 
 .title{
-    font-family: "montAm";
+    font-size: 0.7em;
+    font-family: "montAm-bold";
 }
 
 #btn{
@@ -433,7 +442,7 @@ body{
     border: none;
     border-radius: 24px;
     font-size: 1.15em;
-    font-family: "TitleFont", sans-serif;
+    font-family: "montAm", sans-serif;
     font-weight: 600;
     letter-spacing: 1px;
     margin: 0 auto 18px auto;
