--- a/assets/style.css
+++ b/assets/style.css
@@ -175,7 +175,8 @@ section{
 
 body{
     font-size: 10px;
-    margin: 0;
+    margin: 0 auto;
+    width: 360px;
     background-color: white;
     overflow: hidden;
 }
