--- a/assets/style.css
+++ b/assets/style.css
@@ -175,8 +175,7 @@ section{
 
 body{
     font-size: 10px;
-    margin: 0 auto;
-    width: 360px;
+    margin: 0;
     background-color: white;
     overflow: hidden;
 }
